--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="intro-message">
-						<h1>Dessie's Project</h1>
+						<h1>Dessie's Project, hello</h1>
 						<h3>doing it</h3>
 					</div>
 				</div>
