email text black

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="mc_embed_signup">
 <form action="//apple.us11.list-manage.com/subscribe/post?u=d6a43c4c82abe1dd6421d9c90&amp;id=7098d053b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+	<label for="mce-EMAIL">Get the inside scoop by adding your email to our secret list</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_d6a43c4c82abe1dd6421d9c90_7098d053b4" tabindex="-1" value=""></div>
