--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="intro-message">
-						<h1>Dessie's Project, hello</h1>
-						<h3>doing it</h3>
+						<h1><i>Passions and Other Obssessions</i></h1>
+						<h3>take action</h3>
 					</div>
 				</div>
 			</div>
@@ -30,8 +30,8 @@
 <div id="mc_embed_signup">
 <form action="//apple.us11.list-manage.com/subscribe/post?u=d6a43c4c82abe1dd6421d9c90&amp;id=7098d053b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Get the inside scoop by adding your email to our secret list</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+	<label for="mce-EMAIL">Subscribe here for the inside scoop</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_d6a43c4c82abe1dd6421d9c90_7098d053b4" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">
