add navbar, change titles, etc.

--- a/index.html
+++ b/index.html
@@ -1,49 +1,80 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My landing page</title>
+		<title>Toronto Parents Child Care Assistant</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	</head>
 	<body>
 		<div class="container">
+			<nav class="navbar navbar-inverse">
+  				<div class="container-fluid">
+    				<!-- Brand and toggle get grouped for better mobile display -->
+    					<div class="navbar-header">
+      					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        						<span class="sr-only">Toggle navigation</span>
+        						<span class="icon-bar"></span>
+        						<span class="icon-bar"></span>
+        						<span class="icon-bar"></span>
+      					</button>
+      					<a class="navbar-brand" href="#">Brand</a>
+    					</div>
+    				<!-- Collect the nav links, forms, and other content for toggling -->
+    					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      					<ul class="nav navbar-nav">
+        						<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        						<li><a href="#">About</a></li>
+        						<li class="dropdown">
+          							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
+          							<ul class="dropdown-menu">
+            							<li><a href="#">Timeclock</a></li>
+            							<li><a href="#">Online Registration</a></li>
+            							<li><a href="#">Parent Portal</a></li>
+            							<li role="separator" class="divider"></li>
+            							<li><a href="#">Automated Billing</a></li>
+            							<li role="separator" class="divider"></li>
+            							<li><a href="#">Detailed Reporting</a></li>
+          							</ul>
+        						</li>
+      					</ul>
+         				</div><!-- /.navbar-collapse -->
+  				</div><!-- /.container-fluid -->
+			</nav>
+			
 			<div class="row">
 				<div class="col-md-12">
 					<div class="intro-message">
-						<h1><i>Passions and Other Obssessions</i></h1>
+						<h1><i>Child Care Enrollment Software</i></h1>
 						<br />
-						<h3>take action</h3>
+						<h3>Revolutionizing Toronto's Child Care Enrollment Process</h3>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4">
 					<div class="signup-form">
-
-<!-- Begin MailChimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:rgba(0,0,0,0.6); clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="//apple.us11.list-manage.com/subscribe/post?u=d6a43c4c82abe1dd6421d9c90&amp;id=7098d053b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe here for the inside scoop</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d6a43c4c82abe1dd6421d9c90_7098d053b4" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">
-    </div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-					</div>
+						<!-- Begin MailChimp Signup Form -->
+						<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+						<style type="text/css">
+						#mc_embed_signup{background:rgba(0,0,0,0.6); clear:left; font:14px Helvetica,Arial,sans-serif; }
+						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   					We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+						</style>
+						<div id="mc_embed_signup">
+							<form action="//apple.us11.list-manage.com/subscribe/post?u=d6a43c4c82abe1dd6421d9c90&amp;id=7098d053b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    								<div id="mc_embed_signup_scroll">
+								<label for="mce-EMAIL">Subscribe here to be among the first parents to try it</label>
+								<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+    						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    									<div style="position: absolute; left: -5000px;"><input type="text" name="b_d6a43c4c82abe1dd6421d9c90_7098d053b4" tabindex="-1" value=""></div>
+    									<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success"></div>
+    								</div>
+								</div>
+							</form>
+							
+						<!--End mc_embed_signup-->
+						</div>
 				</div>
 			</div>	
 		</div>
