--- a/index.html
+++ b/index.html
@@ -25,18 +25,13 @@
       					<ul class="nav navbar-nav">
         						<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         						<li><a href="#">About</a></li>
-        						<li class="dropdown">
-          							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
-          							<ul class="dropdown-menu">
-            							<li><a href="#">Timeclock</a></li>
-            							<li><a href="#">Online Registration</a></li>
-            							<li><a href="#">Parent Portal</a></li>
-            							<li role="separator" class="divider"></li>
-            							<li><a href="#">Automated Billing</a></li>
-            							<li role="separator" class="divider"></li>
-            							<li><a href="#">Detailed Reporting</a></li>
-          							</ul>
-        						</li>
+        						<li><a href="#">Timeclock</a></li>
+            					<li><a href="#">Online Registration</a></li>
+            					<li><a href="#">Parent Portal</a></li>
+            					<li role="separator" class="divider"></li>
+            					<li><a href="#">Automated Billing</a></li>
+            					<li role="separator" class="divider"></li>
+            					<li><a href="#">Detailed Reporting</a></li>
       					</ul>
          				</div><!-- /.navbar-collapse -->
   				</div><!-- /.container-fluid -->
@@ -45,7 +40,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="intro-message">
-						<h1><i>Child Care Enrollment Software</i></h1>
+						<h1><i>Child Care Management Software</i></h1>
 						<br />
 						<h3>Revolutionizing Toronto's Child Care Enrollment Process</h3>
 					</div>
@@ -64,7 +59,7 @@
 						<div id="mc_embed_signup">
 							<form action="//apple.us11.list-manage.com/subscribe/post?u=d6a43c4c82abe1dd6421d9c90&amp;id=7098d053b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     								<div id="mc_embed_signup_scroll">
-								<label for="mce-EMAIL">Subscribe here to be among the first parents to try it</label>
+								<label for="mce-EMAIL">Subscribe to be the first to try it</label>
 								<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
     						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     									<div style="position: absolute; left: -5000px;"><input type="text" name="b_d6a43c4c82abe1dd6421d9c90_7098d053b4" tabindex="-1" value=""></div>
@@ -75,6 +70,11 @@
 							
 						<!--End mc_embed_signup-->
 						</div>
+				<ul class="list-group">
+  <li class="list-group-item"> </li>
+  <li class="list-group-item">Toronto Child Care Providers</li>
+  <li class="list-group-item">Toronto Parents</li>
+ </ul>
 				</div>
 			</div>	
 		</div>
