--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
     					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       					<ul class="nav navbar-nav">
         						<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        						<li><a href="#">About</a></li>
-        						<li><a href="#">Timeclock</a></li>
-            					<li><a href="#">Online Registration</a></li>
-            					<li><a href="#">Parent Portal</a></li>
-            					<li role="separator" class="divider"></li>
-            					<li><a href="#">Automated Billing</a></li>
-            					<li role="separator" class="divider"></li>
-            					<li><a href="#">Detailed Reporting</a></li>
+        						<li><a href="#">Toronto Child Care Providers</a></li>
+        						<li><a href="#">Toronto Parents</a></li>
+            					<li><a href="#">Contact</a></li>
       					</ul>
          				</div><!-- /.navbar-collapse -->
   				</div><!-- /.container-fluid -->
@@ -72,8 +67,11 @@
 						</div>
 				<ul class="list-group">
   <li class="list-group-item"> </li>
-  <li class="list-group-item">Toronto Child Care Providers</li>
-  <li class="list-group-item">Toronto Parents</li>
+  <li class="list-group-item">Timeclock</li>
+  <li class="list-group-item">Online Registration</li>
+  <li class="list-group-item">Parent Portal</li>
+  <li class="list-group-item">Automated Billing</li>
+  <li class="list-group-item">Detailed Reporting</li>
  </ul>
 				</div>
 			</div>	
