--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         						<span class="icon-bar"></span>
         						<span class="icon-bar"></span>
       					</button>
-      					<a class="navbar-brand" href="#">Brand</a>
+      					<a class="navbar-brand" href="#"><img alt="Brand" src="blocks.png"></a>
     					</div>
     				<!-- Collect the nav links, forms, and other content for toggling -->
     					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,7 +37,7 @@
 					<div class="intro-message">
 						<h1><i>Child Care Management Software</i></h1>
 						<br />
-						<h3>Revolutionizing Toronto's Child Care Enrollment Process</h3>
+						<h3>Revolutionizing Toronto's Child Care Management </h3>
 					</div>
 				</div>
 			</div>
@@ -66,13 +66,13 @@
 						<!--End mc_embed_signup-->
 						</div>
 				<ul class="list-group">
-  <li class="list-group-item"> </li>
-  <li class="list-group-item">Timeclock</li>
-  <li class="list-group-item">Online Registration</li>
-  <li class="list-group-item">Parent Portal</li>
-  <li class="list-group-item">Automated Billing</li>
-  <li class="list-group-item">Detailed Reporting</li>
- </ul>
+  					<li class="list-group-item"> </li>
+  					<li class="list-group-item">Timeclock</li>
+  					<li class="list-group-item">Online Registration</li>
+  					<li class="list-group-item">Parent Portal</li>
+  					<li class="list-group-item">Automated Billing</li>
+  					<li class="list-group-item">Detailed Reporting</li>
+ 				</ul>
 				</div>
 			</div>	
 		</div>
