--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="intro-message">
-						<h1><i>Child Care Management Software</i></h1>
+						<h1><i>ABC Child Care Management Software</i></h1>
 						<br />
 						<h3>Revolutionizing Toronto's Child Care Management </h3>
 					</div>
